--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,15 +1,14 @@
 ---
 name: Checks
-
-
+ 
 on: [push]
-
+ 
 jobs:
   test-lint:
     name: Test and Lint
     runs-on: ubuntu-24.04
     steps:
-      - name: Login to Docker hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
@@ -17,7 +16,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker compose run --rm app sh -c "python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
-      
+        run: docker compose run --rm app sh -c "flake8"
